# splines

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yaml
examples/: Cargo.toml  hello-world.rs  serialization.rs
examples/01-hello-world/: Cargo.toml
examples/01-hello-world/src/: main.rs
examples/02-serialization/: Cargo.toml
examples/02-serialization/src/: main.rs
src/: cgmath.rs  glam.rs  interpolate.rs  interpolation.rs  iter.rs  key.rs  lib.rs  nalgebra.rs  spline.rs
tests/: cgmath.rs  integ.rs  mod.rs  nalgebra.rs
