[package]
name = "splines"
version = "1.0.0-rc.3"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Spline interpolation made easy"
keywords = ["spline", "interpolation"]
categories = ["science"]
homepage = "https://github.com/phaazon/splines"
repository = "https://github.com/phaazon/splines"
documentation = "https://docs.rs/splines"
readme = "README.md"

edition = "2018"

[badges]
travis-ci = { repository = "phaazon/splines", branch = "master" }
is-it-maintained-issue-resolution = { repository = "phaazon/splines" }
is-it-maintained-open-issues = { repository = "phaazon/splines" }
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
impl-cgmath = ["cgmath"]
impl-nalgebra = ["alga", "nalgebra", "num-traits"]
serialization = ["serde", "serde_derive"]
std = []

[dependencies]
alga = { version = "0.9", optional = true }
cgmath = { version = "0.17", optional = true }
nalgebra = { version = ">=0.14, <0.19", optional = true }
num-traits = { version = "0.2", optional = true }
serde =  { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
