[package]
name = "splines"
version = "4.3.2-dev"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Spline interpolation made easy"
keywords = ["spline", "interpolation"]
categories = ["science"]
homepage = "https://github.com/hadronized/splines"
repository = "https://github.com/hadronized/splines"
documentation = "https://docs.rs/splines"
readme = "README.md"

edition = "2021"

[features]
default = ["std"]
impl-cgmath = ["cgmath"]
impl-glam = ["glam"]
impl-nalgebra = ["nalgebra"]
serialization = ["serde"]
std = []

[dependencies]
cgmath = { version = ">=0.17, <0.19", optional = true }
glam = { version = ">=0.10, <0.29", optional = true }
nalgebra = { version = ">=0.21, <0.33", optional = true }
serde =  { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
float-cmp = ">=0.6, < 0.10"
serde_json = "1"

[package.metadata.docs.rs]
features = ["std", "cgmath", "glam", "nalgebra", "serde"]

[[example]]
name = "hello-world"

[[example]]
name = "serialization"
required-features = ["serde"]
